fix: disable overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   text-transform: capitalize;
   font-size: 16px;
   font-family: 'Cairo', sans-serif;
+  overflow: hidden;
 }
 
 button{
